# construcao

./: .gitignore  pyproject.toml
src/: leroy_merlin.py  obramax.py
src/core/: base_extractor.py  config.py
src/ingestion/core/: base_extractor.py  config.py  decorators.py  logger.py
src/ingestion/scrapers/: joli.py  leroy_merlin.py  obramax.py  sodimac.py
